remove all permissions under provider/iamRoleStatements

--- a/starter/backend/serverless.yml
+++ b/starter/backend/serverless.yml
@@ -41,8 +41,8 @@ provider:
         Action:
         - "xray:PutTraceSegments"
         - "xray:PutTelemetryRecords"
-        Resource:
-        - "*"
+        # Resource:
+        # - "*"
 
 functions:
 
